@@ -4,6 +4,7 @@
  - Fix for bug 29650: Avoid possible NPE when resolving a folder storage by a Content-Type identifier
  - Fix for bug 29651: Added null guard when accessing possibly absent service
  - Fix for bug 29653: Added null guard when accessing possibly absent service
+ - Fix for bug 29654: Added null guard when accessing possibly absent service
 
 * 2013-11-04 - jan.bauerdick@open-xchange.com
 
